Fix nowplaying spacing & improve vibes

--- a/src/components/Spotify/NowPlaying.module.scss
+++ b/src/components/Spotify/NowPlaying.module.scss
@@ -6,7 +6,7 @@
 	color: white;
 	right: 1.25rem;
 	bottom: 1.25rem;
-	padding: 0.75rem 0.75rem 1rem 0.75rem;
+	padding: 0.75rem 0.75rem 0.75rem 0.75rem;
 	max-width: calc(100vw - 2.5rem);
 	width: 20rem;
 	background-color: var(--link-hovered-color);
@@ -118,7 +118,6 @@
 .progress {
 	background-color: #fff;
 	height: 0.5rem;
-	border-top-right-radius: 50px;
 }
 
 .text {
@@ -126,7 +125,15 @@
 	margin: 0;
 	top: 0.125rem;
 	right: 0.5rem;
-	font-size: 0.95rem;
+	font-size: 1rem;
 	font-style: oblique;
 	font-weight: 600;
+	background-image: linear-gradient(to right, #e9e9e9, #ffffffd5 40%, #ffffffb5 80%, #ffffff01);
+    color: transparent;
+    background-clip: text;
+
+	@media only screen and (max-width: 500px) {
+		font-size: 0.75rem;
+		top: 0.0625rem;
+	}
 }
